yaml/old/m347-sky-bollin-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: m347-sky-bollin-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/m347-sky-bollin-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/m347-sky-bollin-default: "true"
